--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: chauhanhimani/todo-app:build-11
+        image: promo286/todo-app:build-11
         ports:
         - containerPort: 80
